OHRI-2012 tb patient summary tiles

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -9,10 +9,17 @@
   "visits": "Visits",
   "allTbClients": "All TB Clients",
   "activeDrCases": "Active DR Cases",
+  "caseID": "Case ID",
+  "enrollmentDate": "Enrollment Date",
   "activeDsCases": "Active DS Cases",
+  "type": "Type",
+  "site": "Site",
+  "drugSensitivity": "Drug Sensitivity",
+  "regimen": "Regimen",
+  "hivStatus": "HIV Status",
+  "outcome": "Outcome",
   "drugResistant": "Cases with drug resistant TB",
   "drugSensitive": "Cases with drug sesnsitive TB",
   "location": "Location",
   "dateContactListed": "Date Contact Listed"
-  
 }
