--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -1,25 +1,25 @@
 {
-  "tuberclosis": "Tuberclosis",
-  "MdrTbEnrolment": "TB/MDR TB Enrolment",
-  "PatientTracing": "Patient Tracing",
-  "TbTreatmentFollowUp": "TB Follow-up",
-  "TbContactListing": "TB Contact Listing",
-  "recentTuberculosis": "Recent Tuberculosis",
-  "previousCases": "Previous Cases",
-  "visits": "Visits",
-  "allTbClients": "All TB Clients",
   "activeDrCases": "Active DR Cases",
-  "caseID": "Case ID",
-  "enrollmentDate": "Enrollment Date",
   "activeDsCases": "Active DS Cases",
-  "type": "Type",
-  "site": "Site",
-  "drugSensitivity": "Drug Sensitivity",
-  "regimen": "Regimen",
-  "hivStatus": "HIV Status",
-  "outcome": "Outcome",
+  "allTbClients": "All TB Clients",
+  "caseID": "Case ID",
+  "dateContactListed": "Date Contact Listed",
   "drugResistant": "Cases with drug resistant TB",
   "drugSensitive": "Cases with drug sesnsitive TB",
+  "drugSensitivity": "Drug Sensitivity",
+  "enrollmentDate": "Enrollment Date",
+  "hivStatus": "HIV Status",
+  "PatientTracing": "Patient Tracing",
+  "previousCases": "Previous Cases",
   "location": "Location",
-  "dateContactListed": "Date Contact Listed"
+  "MdrTbEnrolment": "TB/MDR TB Enrolment",
+  "outcome": "Outcome",
+  "TbTreatmentFollowUp": "TB Follow-up",
+  "TbContactListing": "TB Contact Listing",
+  "tuberclosis": "Tuberclosis",
+  "recentTuberculosis": "Recent Tuberculosis",
+  "regimen": "Regimen",
+  "site": "Site",
+  "type": "Type",
+  "visits": "Visits"
 }
