OHRI-1998 Follow-up visit table under Treatment and Follow-up menu

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -21,5 +21,9 @@
   "regimen": "Regimen",
   "site": "Site",
   "type": "Type",
-  "visits": "Visits"
+  "visits": "Visits",
+  "visitDate": "Visit Date",
+  "monthOfTreatment": "Month of Treatment",
+  "adherenceAssessment": "Adherence Assessment",
+  "nextAppointment": "Next Appointment"
 }
