--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -26,6 +26,6 @@
   "monthOfTreatment": "Month of Treatment",
   "adherenceAssessment": "Adherence Assessment",
   "nextAppointment": "Next Appointment",
-  "typeOfTb": "Type of TB",
+  "siteOfTb": "Site of TB",
   "appointmentDate": "Appointment Date"
 }
