OHRI-2002: Add All TB Clients Table in the Tuberculosis Treatment dashboard (#1710)
* Add All TB Clients Table in the Tuberculosis Treatment dashboard

* Updated->Add All TB Clients

* Add All TB Clients Table in the Tuberculosis Treatment dashboard

* Update tb-patient-list-tabs.component.tsx

* Updated

* Update config-schema.ts

* Update tb-patient-list-tabs.component.tsx

* Update tb-patient-list-tabs.component.tsx

* Update en.json

* Update tb-patient-list-tabs.component.tsx

---------

Co-authored-by: lucyjemutai <lucyjemutai@uonbi.ac.ke>

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -25,5 +25,7 @@
   "visitDate": "Visit Date",
   "monthOfTreatment": "Month of Treatment",
   "adherenceAssessment": "Adherence Assessment",
-  "nextAppointment": "Next Appointment"
+  "nextAppointment": "Next Appointment",
+  "siteOfTb": "Site of TB",
+  "appointmentDate": "Appointment Date"
 }
