--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -23,8 +23,8 @@
   "type": "Type",
   "visits": "Visits",
   "visitDate": "Visit Date",
-  "monthOfTreatment": "Month of Treatment",
-  "adherenceAssessment": "Adherence Assessment",
+  "monthOfTreatment": "Month of Rx",
+  "adherenceAssessment": "Adherence",
   "nextAppointment": "Next Appointment",
   "siteOfTb": "Site of TB",
   "appointmentDate": "Appointment Date"
