Updates on the All TB Clients Table in the Tuberculosis Treatment dashboard

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -27,5 +27,6 @@
   "adherenceAssessment": "Adherence",
   "nextAppointment": "Next Appointment",
   "siteOfTb": "Site of TB",
-  "appointmentDate": "Appointment Date"
+  "appointmentDate": "Appointment Date",
+  "editFollowUpForm": "Edit TB Follow-up Form"
 }
