OHRI-2122 Add Program Management under the TPT Program

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -28,5 +28,7 @@
   "nextAppointment": "Next Appointment",
   "siteOfTb": "Site of TB",
   "appointmentDate": "Appointment Date",
-  "editFollowUpForm": "Edit TB Follow-up Form"
+  "editFollowUpForm": "Edit TB Follow-up Form",
+  "tptEnrolment": "TPT Enrolment", 
+  "tptTreatment": "TPT Treatment"
 }
