Add TB Prevention link under Tuberculosis program in the clinical perspectives

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -2,7 +2,9 @@
   "activeDrCases": "Active DR Cases",
   "activeDsCases": "Active DS Cases",
   "allTbClients": "All TB Clients",
+  "allTptClients": "All TPT Clients",
   "caseID": "Case ID",
+  "currentTptClients": "Clients Currently on TPT",
   "dateContactListed": "Date Contact Listed",
   "drugResistant": "Cases with drug resistant TB",
   "drugSensitive": "Cases with drug sesnsitive TB",
