OHRI-2117 Add TPT program menu

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -30,5 +30,6 @@
   "appointmentDate": "Appointment Date",
   "editFollowUpForm": "Edit TB Follow-up Form",
   "tptEnrolment": "TPT Enrolment", 
-  "tptTreatment": "TPT Treatment"
+  "tptTreatment": "TPT Treatment",
+  "patientSummary": "Patient Summary"
 }
