Add TB Prevention link under Tuberculosis program in the clinical perspectives

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -29,7 +29,9 @@
   "siteOfTb": "Site of TB",
   "appointmentDate": "Appointment Date",
   "editFollowUpForm": "Edit TB Follow-up Form",
-  "tptEnrolment": "TPT Enrolment", 
+  "tptEnrolment": "TPT Enrolment",
   "tptTreatment": "TPT Treatment",
-  "patientSummary": "Patient Summary"
+  "patientSummary": "Patient Summary",
+  "allTptClients": "All TPT Clients",
+  "currentTptClients": "Clients Currently on TPT"
 }
