--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -39,6 +39,6 @@
   "tptAdherence": "Adherence",
   "nextAppointmentDate": "Next Appointment Date",
   "previousCases":  "Previous TPT Cases",
-  "recentTpt": "Recent TPT Cases"
+  "previousTptCases": "Recent TPT Cases"
 
 }
