OHRI-2119: Populate the Recent TPT tiles on the TPT patient summary board (#1783)
* Populate the Recent TPT tiles on the TPT patient summary board

* update

* Update patient-summary.component.tsx

* Update patient-summary.component.tsx

* small update

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -33,5 +33,12 @@
   "tptTreatment": "TPT Treatment",
   "patientSummary": "Patient Summary",
   "allTptClients": "All TPT Clients",
-  "currentTptClients": "Clients Currently on TPT"
+  "currentTptClients": "Clients Currently on TPT",
+  "tptTreatmentId": "TPT Treatment ID",
+  "indication":  "Indication",
+  "tptAdherence": "Adherence",
+  "nextAppointmentDate": "Next Appointment Date",
+  "previousCases":  "Previous TPT Cases",
+  "previousTptCases": "Recent TPT Cases"
+
 }
