--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -39,6 +39,6 @@
   "tptAdherence": "Adherence",
   "nextAppointmentDate": "Next Appointment Date",
   "previousTptCases":  "Previous TPT Cases",
-  "recentTptCases": "Recent TPT Cases",
+  "recentTptCases": "Recent TPT Cases"
 
 }
