Add a table of all enrolled clients in TPT Program

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -33,5 +33,6 @@
   "tptTreatment": "TPT Treatment",
   "patientSummary": "Patient Summary",
   "allTptClients": "All TPT Clients",
-  "currentTptClients": "Clients Currently on TPT"
+  "currentTptClients": "Clients Currently on TPT",
+  "editTptFollowUpForm": "Edit TPT Followup & Treatment form"
 }
