Add the Previous TPT Cases Table on the patient summary board

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -40,5 +40,6 @@
   "nextAppointmentDate": "Next Appointment Date",
   "previousTptCases":  "Previous TPT Cases",
   "recentTptCases": "Recent TPT Cases",
-  "editTptFollowUpForm": "Edit TPT Follow-up form"
+  "editTptFollowUpForm": "Edit TPT Follow-up form",
+  "dateOutcome": "Date of Outcome"
 }
