--- a/packages/esm-ohri-pmtct-app/translations/en.json
+++ b/packages/esm-ohri-pmtct-app/translations/en.json
@@ -39,6 +39,7 @@
   "hivMonitoring": "HIV Monitoring",
   "hivStatus": "HIV Status",
   "hivTestResults": "HIV Test Results",
+  "hivTestStatus": "HIV Test Status",
   "infantPostnatalCare": "Infant Postnatal Care",
   "infantPostnatalVisit": "Infant Postnatal Visit",
   "infantStatus": "Infant Status at Birth",
