Dev merging into working (#1793)
* Added auth for publish to npm (#1775)

* OHRI-2122 Add Program Management under the TPT Program (#1779)

* OHRI-2122 Add Program Management under the TPT Program

* Tab Naming

* Add default translation values

* OHRI-2117 Add TPT program menu (#1781)

* (chore) remove condition for release on master push (#1778)

* OHRI-2109  Add TB Prevention link under Tuberculosis program in the clinical per… (#1782)

* Add TB Prevention link under Tuberculosis program in the clinical perspectives

* renaming

* renaming

* OHRI-2119: Populate the Recent TPT tiles on the TPT patient summary board (#1783)

* Populate the Recent TPT tiles on the TPT patient summary board

* update

* Update patient-summary.component.tsx

* Update patient-summary.component.tsx

* small update

* OHRI-2109: Add TB Prevention link under Tuberculosis program in the clinical perspectives (#1787)

* slight modification - the TB Prevention link comes first followed by TB Treatment

* update on the translator

* Update en.json

* Update en.json

* Update en.json

* OHRI-2011: Add a table of all enrolled clients in TPT Program (#1789)

* Add TB Prevention link under Tuberculosis program in the clinical perspectives

* Add a table of all enrolled clients in TPT Program

* Add a table of all enrolled clients in TPT Program

* Add the Previous TPT Cases Table on the patient summary board (#1790)

* OHRI-2123 TPT Enrolment List (#1786)

* OHRI-2123 TPT Enrolment List

* Exclude Intents in the formList prop

* Update config-schema.ts

* OHRI-1916 : Maternal visits list should indicate HIV Test status not … (#1791)

* OHRI-1916 : Maternal visits list should indicate HIV Test status not HIV test result

* add hivTestStatus to transilation

* Fix hyperlink on empty table list (#1792)

---------

Co-authored-by: AJAL ODORA JONATHAN <43242517+ODORA0@users.noreply.github.com>
Co-authored-by: Pius Rubangakene 

--- a/packages/esm-tb-app/translations/en.json
+++ b/packages/esm-tb-app/translations/en.json
@@ -28,5 +28,18 @@
   "nextAppointment": "Next Appointment",
   "siteOfTb": "Site of TB",
   "appointmentDate": "Appointment Date",
-  "editFollowUpForm": "Edit TB Follow-up Form"
+  "editFollowUpForm": "Edit TB Follow-up Form",
+  "tptEnrolment": "TPT Enrolment",
+  "tptTreatment": "TPT Treatment",
+  "patientSummary": "Patient Summary",
+  "allTptClients": "All TPT Clients",
+  "currentTptClients": "Clients Currently on TPT",
+  "tptTreatmentId": "TPT Treatment ID",
+  "indication":  "Indication",
+  "tptAdherence": "Adherence",
+  "nextAppointmentDate": "Next Appointment Date",
+  "previousTptCases":  "Previous TPT Cases",
+  "recentTptCases": "Recent TPT Cases",
+  "editTptFollowUpForm": "Edit TPT Follow-up form",
+  "dateOutcome": "Date of Outcome"
 }
